[tool.poetry]
name = "quetzal"
version = "1.0.0"
description = "modeling library for transport planning"
authors = ["Quentin Chasserieau <qchasserieau@systra.com"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "<2.3"
pandas = "<3.0"
geopandas = "*"
gtfs-kit = "6.1.0"
openpyxl = "*"
numba = "*"
boto3 = "*"
scipy = "*"
geopy = "*"
scikit-learn = "*"
matplotlib = "*"
notebook = "<7.0"
setuptools = "*"
tqdm = "*"
seaborn = "*"
xlrd = "*"
s3fs = "*"
rasterio = "*"
ipywidgets = "*"
openmatrix = "*"
pip-chill = "*"
networkx = "*"
ruff = "^0.7.4"
zstandard = "^0.23.0"
pydantic = "^2.11.5"



