[tool.poetry]
name = "quetzal-modelling"
version = "3.0.2"
description = "modeling library for transport planning"
authors = ["Quentin Chasserieau <qchasserieau@systra.com>"]
packages = [
  { include = "quetzal" },
  { include = "syspy" }
]

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
numpy = "*"
pandas = "<3.0"
geopandas = "*"
gtfs-kit = "6.1.0"
openpyxl = "*"
numba = "*"
boto3 = "*"
scipy = "*"
geopy = "*"
scikit-learn = "*"
matplotlib = "*"
notebook = "<7.0"
tqdm = "*"
seaborn = "*"
xlrd = "*"
s3fs = "*"
rasterio = "*"
ipywidgets = "*"
openmatrix = "*"
networkx = "*"
ruff = "*"
zstandard = "*"
pydantic = "*"
polars = "*"
pyarrow = "*"
fast-dijkstra = "*"


[tool.poetry.group.dev.dependencies]
twine = "^6.2.0"
pip-chill = "*"


