[tool.poetry]
name = "quetzal-transport"
version = "3.1.3"
description = "modeling library for transport planning"
authors = ["Quentin Chasserieau <qchasserieau@systra.com>"]
readme = "README.md"
repository = "https://github.com/systragroup/quetzal"
documentation = "https://systragroup.github.io/quetzal"
keywords = ["transport", "planning", "simulation", "fast"]
license = "CeCILL-B"

packages = [
  { include = "quetzal" },
  { include = "syspy" }
]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
numpy = "*"
pandas = "<3.0"
geopandas = "*"
gtfs-kit = "6.1.0"
openpyxl = "*"
numba = "*"
boto3 = "*"
scipy = "*"
geopy = "*"
scikit-learn = "*"
matplotlib = "*"
notebook = "<7.0"
tqdm = "*"
seaborn = "*"
xlrd = "*"
s3fs = "*"
rasterio = "*"
ipywidgets = "*"
openmatrix = "*"
networkx = "*"
ruff = "*"
zstandard = "*"
pydantic = "*"
polars = "*"
pyarrow = "*"
fast-dijkstra = "*"


[tool.poetry.group.dev.dependencies]
twine = "^6.2.0"
pip-chill = "*"


